fix canvas width css to not distort the canvas proportions

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -39,7 +39,7 @@ button {color: black;
 #game-route {
   display: block;
 }
-canvas {width: 100%;
-        height: 500px;
-        vertical-align: middle;
+canvas {
+    width: 100%;
+    vertical-align: middle;
 }
